--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
       	<input type='submit' id='sub' value='Send'>
       </div>
       <div id='user'>
-      	<input type="text" id='username' required="true">
+      	<input type="text" id='username' placeholder="Type your name here" required="true">
       	<input type="color" id='color' required="true">
       </div>
       
