--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form input#m { display: inline-block; width: 90%;}
       form input#sub { display: inline-block; width: 9%; }
+      div#message_container {overflow-y: scroll;max-height: 85%;}
+      div#form_container {height: 15%;}
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
@@ -19,18 +21,20 @@
 
 </head>
 <body>
-	<ul id="messages"></ul>
-    <form action="">
-      <div id='msg_div'>
-      	<input type='text' id="m" autocomplete="off" placeholder="Type your message here" >
-      	<input type='submit' id='sub' value='Send'>
-      </div>
-      <div id='user'>
-      	<input type="text" id='username' placeholder="Type your name here" required="true">
-      	<input type="color" id='color' required="true">
-      </div>
+	<div id='message_container'><div style="{padding: 5px;}"><ul id="messages"></ul></div></div>
+    <div id='form_container'>
+    	<form action="">
+		  <div id='msg_div'>
+		  	<input type='text' id="m" autocomplete="off" placeholder="Type your message here" >
+		  	<input type='submit' id='sub' value='Send'>
+		  </div>
+		  <div id='user'>
+		  	<input type="text" id='username' required="true">
+		  	<input type="color" id='color' required="true">
+		  </div>
       
-    </form>	
+    	</form>	
+    </div>
     <script src='chat.js'></script>
 	
 </body>
