--- a/views/chatfortwo3.ejs
+++ b/views/chatfortwo3.ejs
@@ -187,7 +187,7 @@
 
         $(function(){
 
-          socket = io(pathdev);
+          socket = io(pathserv);
         	socket.on('message from server', function (msg){
 
 			/* var msg= {
