--- a/views/chatfortwo3.ejs
+++ b/views/chatfortwo3.ejs
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
         <title>Chatroomfortwo</title>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
