--- a/views/chatfortwo3.ejs
+++ b/views/chatfortwo3.ejs
@@ -129,7 +129,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!-- socket io -->
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
        <!-- <script type="text/javascript" src="chat3.js"></script> -->
 
       <script type="text/javascript">
